--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /plots/
 /workflows/
 /output*
+/modified_embeddings_c_atrox*
 
 # Large data
 # The default needs to ignore all files with an extension instead of folders as it is not possible to re-include a file if a parent directory of that file is excluded.
